# diffusion-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md  pyproject.toml
scripts/: run_wan2_adapt.py
src/diffusion_agent/: __init__.py  __main__.py  cli.py  config.py
src/diffusion_agent/adapt/: __init__.py  executors.py  git_memory.py  judge.py  patch_worker.py  planner.py  runner.py  supervisor.py  types.py  workspace_sync.py
src/diffusion_agent/agents/: coding_agent.py  graph.py  init_agent.py  router.py  state.py
src/diffusion_agent/data/: op_support.json
src/diffusion_agent/llm/: provider.py
src/diffusion_agent/scenarios/: __init__.py  adapt.py  check_support.py
src/diffusion_agent/state_mgmt/: daily_log.py  feature_list.py  rules.py  task_file.py
src/diffusion_agent/tools/: api_doc_fetcher.py  api_doc_parser.py  baseline_runner.py  code_migrator.py  code_scanner.py  (+5 more)
templates/: feature-list.yaml.j2  standing-rules.md
tests/: conftest.py
tests/integration/: test_baseline_models.py  test_check_scenario_e2e.py
tests/unit/: test_adapt_executors.py  test_adapt_git_memory.py  test_adapt_judge.py  test_adapt_patch_worker.py  test_adapt_planner.py  test_adapt_runner.py  test_adapt_scenario.py  test_adapt_supervisor.py  test_adapt_types.py  test_adapt_workspace_sync.py  test_api_doc_fetcher.py  test_api_doc_parser.py  test_baseline_runner.py  test_check_support.py  test_code_migrator.py  test_code_scanner.py  test_code_scanner_extended.py  test_llm_migrator.py  test_npu_verifier.py  test_state_mgmt.py  test_torch_npu_checker.py
(+2 files in other folders)
